--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -1,7 +1,21 @@
 .dialogs {
     display: grid;
     grid-template-columns: 2fr 10fr;
+}
+
+.dialogsItems {
     padding: 10px;
+    color: white;
+}
+
+.dialogsItems img {
+    width: 50px;
+    height: 50px;
+    border-radius: 30px;
+}
+
+.dialogsItems a.activeLink {
+    color: gold;
 }
 
 .dialog {
@@ -9,18 +23,8 @@
     padding: 10px;
 }
 
-.dialogsItems {
-    padding: 10px;
-}
-
-
-
 .dialogsItems a {
     color: white;
     text-decoration: none;
-}
-
-.dialogsItems a.activeLink {
-    color: gold;
 }
 
